--- a/css/style1.css
+++ b/css/style1.css
@@ -137,8 +137,8 @@ portfolio
 .bg-title1{margin-top:0px;position: absolute;z-index: 1;width: 100%;}
 .portfolio__container{height:100%;display: flex;justify-content: flex-end;align-items: center;}
 .portfolio__main-copy{width: 40%;margin:0;margin-top: 150px;margin-right: 120px;z-index: 2;}
-.large1{color:#e5e5e5;font-size: 50px;text-align: right;margin: 5px 0 0; padding: 1px 0 4px;font-weight: 800;letter-spacing: 1px;}
-.large2{font-size: 20px;font-weight: 400;text-align:right;color: #9a9a9a;margin: 10px 0 0; padding: 2px 0 3px;}
+.large1{color:#e5e5e5;font-size: 50px;text-align: left;margin: 5px 0 0; padding: 1px 0 4px;font-weight: 800;letter-spacing: 1px;}
+.large2{font-size: 20px;font-weight: 400;text-align:justify;color: #9a9a9a;margin: 10px 0 0; padding: 2px 0 3px;}
 .large2 h3{line-height: 30px;}
 
 .my-photo1{float: left;position: absolute;left:50px;width: 50%;z-index: 1;opacity: 100%;object-fit: cover;}
