--- a/css/style2.css
+++ b/css/style2.css
@@ -230,7 +230,7 @@ Tablet
 
 
 /*-------------------------------------
-Smartphone
+Smartphone M
 -------------------------------------*/
 
 @media (max-width:426px){
@@ -275,6 +275,15 @@ Smartphone
 }
 
 
+/*-------------------------------------
+Smartphone S
+-------------------------------------*/
+
+@media (max-width:321px){
+
+.contact-link{font-size:16px;}
+
+}
 
 
 /*-------------------------------------
