--- a/css/style1.css
+++ b/css/style1.css
@@ -248,7 +248,7 @@ Tablet
 }
 
 /*-------------------------------------
-Smartphone
+Smartphone M
 -------------------------------------*/
 
 @media (max-width:426px){
@@ -279,6 +279,15 @@ Smartphone
 }
 
 
+/*-------------------------------------
+Smartphone S
+-------------------------------------*/
+
+@media (max-width:321px){
+
+.large0, .large1, .large3 {font-size: 50px;}
+
+}
 
 
 /*-------------------------------------
